--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -267,7 +267,7 @@
                 <p class="contact-info mt-4">
                   Contact us if need help with anything
                 </p>
-                <p class="contact-info">+01 123-456-7890</p>
+                <p class="contact-info">079625483001</p>
                 <div class="mt-5">
                   <ul class="list-inline">
                     <li class="list-inline-item">
@@ -301,7 +301,7 @@
   
         <div class="text-center mt-5">
           <p class="footer-alt mb-0 f-14">
-            2022 © Doctors' Connect, All Rights Reserved
+            2022 © Medistore , All Rights Reserved
           </p>
         </div>
       </footer>
