--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="medicines" href="#">Navbar</a>
+    <a class="navbar-brand" routerLink="landing" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,9 @@
       <button type="button" class="btn btn-primary">Register</button>
       <button type="button" class="btn btn-success" style="margin-right: 30px; margin-left:30px;">Donate</button>
     </div>
+
   </nav>
+
 </body>
 
 </html>
