--- a/src/app/medicines/medicines.component.css
+++ b/src/app/medicines/medicines.component.css
@@ -2,8 +2,7 @@
   margin: 5%;
   display: grid;
   grid-template-columns: 1fr 2fr;
-
-  gap: 20px;
+  gap: 5rem;
 }
 @media only screen and (max-width: 600px) {
   .diseases {
@@ -19,7 +18,7 @@
   display: grid;
   gap: 2rem;
 
-  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   /* grid-template-columns: 1fr 1fr; */
 }
 
@@ -74,7 +73,7 @@ li {
   position: relative;
   overflow: hidden;
   min-height: 100px;
-  max-height: 400px;
+  max-height: 410px;
 }
 .card:hover {
   box-shadow: 8px 12px 31px -10px #ab98ab;
@@ -112,4 +111,41 @@ li {
 
 li {
   display: block;
+}
+
+.card-img-top {
+  max-height: 200px;
+  max-width: 100%;
+}
+
+.card-text {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+/* Modal */
+.modal-img {
+  max-width: 550px;
+  max-height: 600px;
+  border-radius: 10px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(0, 0, 0);
+}
+
+.modal-content {
+  display: grid;
+  place-items: center;
+  color: black;
+}
+
+.modal-title {
+  font-size: 30px;
+  color: black;
+}
+
+.modal-description {
+  font-size: 20px;
+  color: black;
 }
