--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 
 <router-outlet></router-outlet>
 <!-- <app-landing></app-landing> -->
-<app-medicines></app-medicines>
+<!-- <app-medicines></app-medicines> -->
