--- a/src/app/single-medicine/single-medicine.component.html
+++ b/src/app/single-medicine/single-medicine.component.html
@@ -2,8 +2,8 @@
   <div class="hover hover-3 text-white rounded"><img src="" alt="">
     <div class="hover-overlay"></div>
     <div class="hover-3-content px-5 py-4">
-      <h1>Test --{{medicine}}</h1>
-      <h3 class="hover-3-title text-uppercase font-weight-bold mb-1">Test</h3>
+      <h1></h1>
+      <h3 class="hover-3-title text-uppercase font-weight-bold mb-1">{{medicine.name}}</h3>
       <!-- <a href="{{project.link}}" class=" btn hover-3-description small text-uppercase mb-0"style="margin-top:30px;">Visit Site</a> -->
     </div>
   </div>
