--- a/src/app/medicines/medicines.component.html
+++ b/src/app/medicines/medicines.component.html
@@ -39,7 +39,7 @@
             <div class="card-content">
               <p class="card-text">{{item.description}}</p>
               <div class="card-buttons">
-                <a href="#" class="btn btn-primary">Buy</a>
+                <a href="/single/{{item.id}}" class="btn btn-primary">Buy</a>
                 <button style="margin-left: 50px" attr.data-target="#{{item.id}}" type="button" class="btn btn-primary"
                   (click)="openPopup()">Info
                 </button>
