--- a/src/app/medicine-form/medicine-form.component.html
+++ b/src/app/medicine-form/medicine-form.component.html
@@ -8,6 +8,8 @@
     <input type="number" class="form-control" formControlName="price">
     <label>description</label>
     <input type="text" class="form-control" formControlName="description">
+    <label>picture</label>
+    <input type="file" class="form-control" formControlName="picture">
     <div class="form-group">
       <label>disease</label>
       <select class="form-control" formControlName="disease">
