--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,127 +1,214 @@
-<!-- This is the landing page -->
-<!-- It is the first page that is displayed. -->
-
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Landing Page</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/css/lightbox.min.css">
+  <title>Document</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+
+  <!-- CSS Libraries -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+
+  <!-- CSS Libraries -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
 
 </head>
 
-
 <body>
-
-
-  <!-- Container to contain image background and search functionality -->
-  <div class="container-fluid"
-    style="background-image: url(https://images.unsplash.com/photo-1617881770125-6fb0d039ecde?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fHBoYXJtYWN5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=900&q=50); background-size:cover;">
-    <div class="row">
-      <div class="col-md-12">
-        <h1 class="display-4" style="padding-left: 300px;margin-top: 100px; color:white;font-weight:bolder;">Medicine
-          access. Made Simple</h1>
-        <div class="input-group md-form form-lg form-2 pl-0" style="padding-top: 200px;margin-bottom: 400px;">
-          <input class="form-control my-0 py-1 red-border" type="text" placeholder="Search" aria-label="Search"
-            style="margin-left: 300px;margin-right: 0px;">
-          <div class="input-group-append">
-            <span class="input-group-text red lighten-3" id="basic-text1"
-              style="margin-right: 100px;margin-right: 400px;"><i class="fas fa-search text-grey"
-                aria-hidden="true"></i></span>
+  <div class="top-bar d-none d-md-block">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-8">
+          <div class="top-bar-left">
+            <div class="text">
+              <i class="fa fa-phone-alt"></i>
+              <p>+254711264830</p>
+            </div>
+            <div class="text">
+              <i class="fa fa-envelope"></i>
+              <p>medistore.med@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="top-bar-right">
+            <div class="social">
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-facebook-f"></i></a>
+              <a href=""><i class="fab fa-linkedin-in"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <br>
-  <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4" style="padding-bottom: 30px;">
-        <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="" alt="Card image cap">
-          <div class="card-body">
-            <p class="card-text"></p>
-            <p class="card-text"></p>
-            <p class="card-text"></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <br>
-  <hr class="my-4">
-  <br><br>
-  <div class="container jumbotron">
-    <div class="row jumo">
-      <div class="col-sm-4">
-        <img
-          src="https://media.istockphoto.com/photos/group-of-happy-african-children-from-samburu-tribe-kenya-africa-picture-id639889270?b=1&k=20&m=639889270&s=170667a&w=0&h=AZQiKp90re44U6omByT7o02rRUq4zwzvB_fEiBfQDP0="
-          alt="">
-      </div>
-      <div class="col-sm-4" style="margin-left: 300px;">
-        <h1 class="display-0">Welcome to the Landing Page</h1>
-        <p class="lead">This is the landing page. It is the first page that is displayed.</p>
+  <!-- Top Bar End -->
 
-        <p>This is the landing page. It is the first page that is displayed.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
+  <!-- Nav Bar Start -->
+  <div class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a href="/" class="navbar-brand">Medistore</a>
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+        <div class="navbar-nav ml-auto">
+          <a href="/" class="nav-item nav-link active">Home</a>
+          <a href="/donate" class="nav-item nav-link">Donate now</a>
+          <div class="nav-item dropdown">
+            <a routerLink="medicines" class="nav-link " data-toggle="dropdown">Medicines</a>
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-item">Detail Page</a>
+              <a href="#" class="dropdown-item">What We Do</a>
+              <a href="#" class="dropdown-item">Meet The Team</a>
+              <a href="#" class="dropdown-item">Donate Now</a>
+              <a href="#" class="dropdown-item">Become A Volunteer</a>
+            </div>
+          </div>
+          <a href="#" class="nav-item nav-link">About us</a>
+          <a href="#" class="nav-item nav-link">Contact us</a>
+        </div>
       </div>
     </div>
   </div>
-  <br>
+
+  <div class="carousel">
+    <div class="container-fluid">
+      <div class="owl-carousel">
+        <div class="carousel-item">
+          <div class="carousel-img">
+            <img
+              src="https://images.unsplash.com/photo-1657037030554-ab3410b8820c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+              alt="Image">
+          </div>
+          <div class="carousel-text">
+            <h1>Medicine access.Made simple</h1>
+
+            <div class="input-group md-form form-lg form-2 pl-0" style="margin-top: 40px; margin-right: 200px;">
+              <input class="form-control my-0 py-1 red-border" type="text" placeholder="Search" aria-label="Search"
+                style="margin-left: 200px;border-radius: 50px;margin-bottom: 50px;border-radius: 50px;margin-right: 20px; height: 50px;">
+              <div class="input-group-append">
+                <span class="input-group-text red lighten-3" id="basic-text1" style="border-radius: 50px;"><i
+                    class="fas fa-search text-grey" aria-hidden="true"></i></span>
+              </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="carousel-btn">
+              <a class="btn btn-custom" href="/donate-form">Donate Now</a>
+              <a class="btn btn-custom btn-play" data-toggle="modal"
+                data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">Watch Video</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <hr>
-  <h1 style="margin-left: 400px;">What our patients say about us</h1>
-  <div class="row">
+
+  <div class="container">
+    <div class="row" style="padding-top: 600px;">
+      <div class="col-sm-4" style="padding-bottom: 20px;">
+        <div class="card" style="width: 18rem;">
+          <a href="#" target="_blank" rel="noopener noreferrer"><img
+              src="https://images.unsplash.com/photo-1530026186672-2cd00ffc50fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGVhcnQlMjBhdHRhY2t8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              class="card-img-top" alt="..."></a>
+          <div class="card-body">
+            <h3>Cardiology</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://media.istockphoto.com/photos/hairy-cell-leukemia-picture-id1076111804?b=1&k=20&m=1076111804&s=170667a&w=0&h=qpC2tv10t385K9Kk9tozpwBrAOqUwajlHWXPYGVFGH8="
+            alt="">
+          <div class="card-body">
+            <h3>Leukemia</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://images.unsplash.com/photo-1598885159329-9377168ac375?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8b25jb2xvZ3l8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3>Breast Cancer</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://media.istockphoto.com/photos/human-respiratory-system-lungs-anatomy-picture-id1323656101?b=1&k=20&m=1323656101&s=170667a&w=0&h=6nxCoJmwwMQ8Z_WE8adQvHUI4jPCIt1Sd7BJipJ0vnY="
+            alt="">
+          <div class="card-body">
+            <h3>Chronic Obstructive Pulmonary Disease</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://media.istockphoto.com/photos/adult-and-child-hands-holding-encephalography-brain-paper-cutout-picture-id1210226574?b=1&k=20&m=1210226574&s=170667a&w=0&h=1MbOtp_dDI6JD_aFx3J6JNd6-BDCFQIIpm9kg6dllW8="
+            alt="">
+          <div class="card-body">
+            <h3>Epilepsy</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://media.istockphoto.com/photos/emotional-stress-ilusions-picture-id680399070?b=1&k=20&m=680399070&s=170667a&w=0&h=0y4DTu7pkJ054Mag8a9KAawL6wdP7RaclkzNMxuPjAY="
+            alt="">
+          <div class="card-body">
+            <h3>Schizophrenia</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr style="margin-top: 50px;">
+  <div class="container new">
+    <img
+      src="https://images.unsplash.com/photo-1628595351029-c2bf17511435?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fG1lZGljaW5lfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=1300&h=500&q=60"
+      alt="Notebook">
+    <div class="content">
+      <h1 class="display-0" style="color: white;padding-left: 200px;">A safe and legal process</h1>
+      <p class="lead">This is the landing page. It is the first page that is displayed.</p>
+
+      <p style="font-size:large">Medicine approval delays cost lives. When you are in urgent need, you shouldn’t have to
+        wait. If you want to access a medicine from abroad, you need to follow strict guidelines set by your health
+        authorities.
+
+        With a prescription from your treating doctor, you can count on our expert team to safely and legally guide you
+        in accessing the medicine you need on the basis of the Named Patient regulations set by your health authorities
+      </p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button" style="color:aliceblue;">Learn more</a>
+      </p>
+    </div>
+  </div>
+  <div class="row" style="margin-top: 550px;">
+    <h1 style="margin-left: 323px;margin-top: 30px;font-size: 50px;">What our patients say about us</h1>
     <section class="t-bq-section" id="jenny">
       <div class="t-bq-wrapper t-bq-wrapper-boxed">
         <div class="t-bq-quote t-bq-quote-jenny">
@@ -207,6 +294,7 @@
       </div>
     </section>
   </div>
+
 
   <footer class="section bg-footer">
     <div class="container">
@@ -289,6 +377,9 @@
     </div>
   </footer>
 
+  <!-- JavaScript Libraries -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
