--- a/src/app/medicines/medicines.component.css
+++ b/src/app/medicines/medicines.component.css
@@ -13,7 +13,16 @@
     place-items: center;
   }
 }
+/* body {
+  padding-top: 100px;
+  background-color: rgba(0, 0, 0, 0.311);
+}
 
+@media only screen and (max-width: 992px) {
+  body {
+    padding-top: 50px;
+  }
+} */
 .medicines {
   display: grid;
   gap: 2rem;
