--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          <a class="nav-link" routerLink="medicines" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Medicines
           </a>
@@ -38,12 +38,11 @@
           <a class="nav-link" href="#">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Contact us</a>
+          <a class="nav-link disabled" routerLink="medicine-form">New Medicine</a>
         </li>
       </ul>
-      <button type="button" class="btn btn-outline-primary" style="margin-right: 20px;">Login</button>
-      <button type="button" class="btn btn-primary">Register</button>
-      <button type="button" class="btn btn-success" style="margin-right: 30px; margin-left:30px;">Donate</button>
+      <button type="button" class="btn btn-success" routerLink="donation"
+        style="margin-right: 30px; margin-left:30px;">Donate</button>
     </div>
 
   </nav>
