--- a/src/app/landing2/landing2.component.html
+++ b/src/app/landing2/landing2.component.html
@@ -9,10 +9,22 @@
 </head>
 
 <body>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Fluid jumbotron</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  <div class="background">
+    <div class=" jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Medical access made simple</h1>
+        <div class="input-group md-form form-lg form-2 pl-0" style="margin-top: 40px; margin-right: 200px;">
+          <input class="form-control my-0 py-1 red-border" type="text" placeholder="Search" aria-label="Search"
+            style="margin-left: 200px;border-radius: 50px;margin-bottom: 50px;border-radius: 50px;margin-right: 20px; height: 50px;">
+          <div class="input-group-append">
+            <span class="input-group-text red lighten-3" id="basic-text1" style="border-radius: 50px;"><i
+                class="fas fa-search text-grey" aria-hidden="true"></i></span>
+          </div>
+        </div>
+        <div class="btn"><a class="btn btn-custom" href="/donate-form">Donate Now</a>
+          <a class="btn btn-custom" href="/donate-form">View Medicines</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
