--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,67 @@
 </head>
 
 <body>
-  <!-- Navbar -->
+  <header>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top mask-custom shadow-0">
+      <div class="container">
+        <a class="navbar-brand" href="#!"><span style="color: #5e9693;">Psycho</span><span
+            style="color: #fff;">logist</span></a>
+        <a class="navbar-brand" routerLink="medicines" href="#!"><span style="color: #5e9693;">Medicines</span></a>
+        <button class="navbar-toggler" data-bs-toggle="dropdown" type="button" data-mdb-toggle="collapse"
+          data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#!">Offer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!">Reference</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!">Contact</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav d-flex flex-row">
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link" href="#!">
+                <i class="fas fa-shopping-cart"></i>
+              </a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link" href="#!">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link" href="#!">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar -->
+
+  </header>
+
+  <!-- Navbar
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" routerLink="medicines" href="#">Medicines</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -38,14 +98,13 @@
           <a class="nav-link" href="#">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" routerLink="medicine-form">New Medicine</a>
+          <a class="nav-link" href="/medicine-form">New Medicine</a>
         </li>
       </ul>
-      <button type="button" class="btn btn-success" routerLink="donation"
-        style="margin-right: 30px; margin-left:30px;">Donate</button>
+      <a type="button" class="btn btn-success" href="/donate" style="margin-right: 30px; margin-left:30px;">Donate</a>
     </div>
 
-  </nav>
+  </nav> -->
 
 </body>
 
