--- a/src/app/single-medicine/single-medicine.component.html
+++ b/src/app/single-medicine/single-medicine.component.html
@@ -8,6 +8,9 @@
     </div>
   </div>
 </div>
+
+<h2>Units remaining {{units_remaining.units_calculated}}</h2>
+<h2>Current Price {{current_price.discounted_price}}</h2>
 <div class="container">
   <div class="project-content">
     <!-- <h1>{{project.title}}</h1> -->
