--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<!-- <app-navbar></app-navbar> -->
+<app-navbar></app-navbar>
+<br>
+<br>
 
 <router-outlet></router-outlet>
+<!-- <app-landing2></app-landing2> -->
 <!-- <app-landing></app-landing> -->
 <!-- <app-medicines></app-medicines> -->
+<ngx-loading-bar></ngx-loading-bar>
