--- a/src/app/donation/donation.component.html
+++ b/src/app/donation/donation.component.html
@@ -1,171 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- <div class="container">
+    <form novalidate [formGroup]="myForm" #testForm="ngForm" (ngSubmit)="getText(testForm.value)">
+        <label>Amount</label>
+        <input type="number" class="form-control" formControlName="donation_amount">
+        <label>Email</label>
+        <input type="text" class="form-control" formControlName="email">
+        <label>Phone number</label>
+        <input type="number" class="form-control" formControlName="phone_number">
 
-<head>
-    <meta charset="utf-8">
-    <title>MedistoreFrontend</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
-
-
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-
-    <!-- CSS Libraries -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-
-    <!-- CSS Libraries -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-
-</head>
-
-<body>
-    <!-- Top Bar Start -->
-    <div class="top-bar d-none d-md-block">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="top-bar-left">
-                        <div class="text">
-                            <i class="fa fa-phone-alt"></i>
-                            <p>+123 456 7890</p>
-                        </div>
-                        <div class="text">
-                            <i class="fa fa-envelope"></i>
-                            <p>info@example.com</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="top-bar-right">
-                        <div class="social">
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-linkedin-in"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="form-group">
+            <label>Donor</label>
+            <select class="form-control" formControlName="donor">
+                <option value="">Would you like to be recorded or ananymous</option>
+                <option *ngFor="let don of donors" [value]=don>{{don }}
+                </option>
+            </select>
         </div>
-    </div>
-    <!-- Top Bar End -->
+        <pre>{{myForm.value | json}}</pre>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div> -->
 
-    <!-- Nav Bar Start -->
-    <div class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container-fluid">
-            <a href="/" class="navbar-brand">Medistore</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+<div class="container shell ">
+    <section class="text-body">
 
-            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="/donate-form" class="nav-item nav-link">Donate now</a>
-                </div>
+        <h2>Mehtods od donation</h2>
+        <h3>Anonynmously</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, eum ipsa! Odio ratione, voluptas impedit
+            voluptate temporibus adipisci doloremque sapiente iure similique. Quisquam provident eos eius et eligendi
+            est dolore iste assumenda. Dignissimos facere obcaecati deleniti corrupti commodi reiciendis maxime?</p>
+        <h3>Recorded</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, eum ipsa! Odio ratione, voluptas impedit
+            voluptate temporibus adipisci doloremque sapiente iure similique. Quisquam provident eos eius et eligendi
+            est dolore iste assumenda. Dignissimos facere obcaecati deleniti corrupti commodi reiciendis maxime?</p>
+    </section>
+    <section class="get-in-touch">
+        <h1 class="title">Thank you for your donation</h1>
+        <form class="contact-form row" novalidate [formGroup]="myForm" #testForm="ngForm"
+            (ngSubmit)="getText(testForm.value)">
+            <div class="form-field col-lg-6">
+                <input id="name" class="input-text js-input" type="text" required formControlName="donation_amount">
+                <label class="label" for="name">Donation amount</label>
             </div>
-        </div>
-    </div>
-    <!-- Nav Bar End -->
-
-
-    <!-- Carousel Start -->
-    <div class="carousel">
-        <div class="container-fluid">
-            <div class="owl-carousel">
-                <div class="carousel-item">
-                    <div class="carousel-img">
-                        <img src="https://images.unsplash.com/photo-1657037030554-ab3410b8820c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="Image">
-                    </div>
-                    <div class="carousel-text">
-                        <h1>Donate for a better world</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Phasellus ut mollis mauris. Vivamus egestas eleifend dui ac
-                            consequat at lectus in malesuada
-                        </p>
-                        <div class="carousel-btn">
-                            <a class="btn btn-custom" href="/donate-form">Donate Now</a>
-                            <a class="btn btn-custom btn-play" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">Watch
-                                Video</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="form-field col-lg-6 ">
+                <input id="email" class="input-text js-input" type="email" required formControlName="email">
+                <label class="label" for="email">E-mail</label>
             </div>
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="donate" data-parallax="scroll" data-image-src="#"
-        style="padding-top: 450px;  background-image: url('')">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-7">
-                    <div class="donate-content">
-                        <div class="section-header">
-                            <p>Donate Now</p>
-                            <h2>Let's donate to needy people for better lives</h2>
-                        </div>
-                        <div class="donate-text">
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare
-                                velit non. Aliquam metus tortor, auctor id gravida, viverra quis sem. Curabitur non nisl
-                                nec nisi maximus. Aenean convallis porttitor. Aliquam interdum at lacus non blandit.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="donate-form">
-                        <form>
-                            <div class="control-group">
-                                <input type="text" class="form-control" placeholder="Name" required="required" />
-                            </div>
-                            <div class="control-group">
-                                <input type="email" class="form-control" placeholder="Email" required="required" />
-                            </div>
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-custom active">
-                                    <input type="radio" name="options" checked> $10
-                                </label>
-                                <label class="btn btn-custom">
-                                    <input type="radio" name="options"> $20
-                                </label>
-                                <label class="btn btn-custom">
-                                    <input type="radio" name="options"> $30
-                                </label>
-                            </div>
-                            <div>
-                                <button class="btn btn-custom" type="submit">Donate Now</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+            <div class="form-field col-lg-6 ">
+                <input id="company" class="input-text js-input" type="text" required formControlName="phone_number">
+                <label class="label" for="company">Phone Number</label>
             </div>
-        </div>
-    </div>
+            <div class="form-group" class="form-field col-lg-6 ">
+                <select class="form-control" class="input-text js-input" formControlName="donor">
+                    <option value="">Would you like to be recorded or ananymous</option>
+                    <option *ngFor="let don of donors" [value]=don>{{don }}
+                    </option>
+                </select>
+                <label class="label" for="phone">Donor</label>
+            </div>
 
+            <div class="form-field col-lg-12">
+                <input class="submit-btn" type="submit" href="/" value="Submit">
+            </div>
+            <pre>{{myForm.value | json}}</pre>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-
-
-</body>
-
-</html>
-
-
-<router-outlet></router-outlet>
+        </form>
+    </section>
+</div>
