--- a/src/app/shopping-form/shopping-form.component.html
+++ b/src/app/shopping-form/shopping-form.component.html
@@ -1,56 +1,44 @@
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="medicines" href="#">Medicines</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="container shell ">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link" routerLink="medicines" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Medicines
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/medicine-form">New Medicine</a>
-      </li>
-    </ul>
-    <a type="button" class="btn btn-success" href="/donation" style="margin-right: 30px; margin-left:30px;">Donate</a>
-  </div>
+  <section class="text-body">
 
-</nav>
+    <h2>Methods od donation</h2>
+    <h3>Anonynmously</h3>
 
-<div class="container">
-  <form novalidate [formGroup]="myForm" #testForm="ngForm" (ngSubmit)="getText(testForm.value)">
-    <div class=" form-group">
-      <label>Medicine</label>
-      <input type="number" readonly class="form-control" value="{{medicines.id}}" placeholder="{{medicines.name}}"
-        formControlName="medicine">
-    </div>
-    <label>Number</label>
-    <input type="number" class="form-control" formControlName="units">
-    <div class="form-group">
-      <label>User</label>
-      <select class="form-control" formControlName="buyer">
-        <option value="">Please select a User</option>
-        <option [value]="1">Mariga</option>
-      </select>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+    <p>Units remaining : {{units_remaining.units_calculated}}</p>
+    <p>Current Price : {{current_price.discounted_price }}</p>
+    <!-- <p>Current Price : {{units}}</p> -->
+
+    <h3>Recorded</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, eum ipsa! Odio ratione, voluptas impedit
+      voluptate temporibus adipisci doloremque sapiente iure similique. Quisquam provident eos eius et eligendi
+      est dolore iste assumenda. Dignissimos facere obcaecati deleniti corrupti commodi reiciendis maxime?</p>
+  </section>
+  <section class="get-in-touch">
+    <h1 class="title">Thank you for your purchase</h1>
+    <form class="contact-form row" novalidate [formGroup]="myForm" #testForm="ngForm"
+      (ngSubmit)="getText(testForm.value)">
+      <div class="form-field col-lg-6">
+        <input id="name" class="input-text js-input" type="number" required placeholder="{{medicines.name}}"
+          value="{{medicines.id}}" readonly formControlName="medicine">
+        <label class="label" for="name">Medicine</label>
+      </div>
+      <div class="form-field col-lg-6 ">
+        <input id="email" class="input-text js-input" type="number" required formControlName="units_sold">
+        <label class="label" for="email">Units</label>
+      </div>
+      <div class="form-group" class="form-field col-lg-6 ">
+        <select class="form-control" class="input-text js-input" formControlName="buyer">
+          <option value="">Please select a User</option>
+          <option [value]="2">Mariga</option>
+        </select>
+      </div>
+
+      <div class="form-field col-lg-12">
+        <input class="submit-btn" type="submit" href="/" value="Submit">
+      </div>
+      <pre>{{myForm.value.units_sold}}</pre>
+
+    </form>
+  </section>
 </div>
