--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -168,7 +168,7 @@
     </div>
     <hr style="margin-top: 50px;">
     <div class="container new">
-        <img src="https://images.unsplash.com/photo-1628595351029-c2bf17511435?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fG1lZGljaW5lfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=1300&h=500&q=60"  alt="Notebook">
+        <img src="https://images.unsplash.com/photo-1628595351029-c2bf17511435?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fG1lZGljaW5lfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=1300&h=500&q=60" class="image-fluid" alt="Notebook">
         <div class="content">
             <h1 class="display-0" style="color: white;padding-left: 200px;">A safe and legal process</h1>
             <p class="lead">This is the landing page. It is the first page that is displayed.</p>
@@ -351,5 +351,6 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/assets/js/nav.js"></script>
 </body>
 </html>
